Fixed clipping of signup form on mobile devices

--- a/_sass/ais/join.scss
+++ b/_sass/ais/join.scss
@@ -11,7 +11,6 @@
     top: -20px;
     padding-left: 0px;
     padding-right: 50px;
-    margin-left: -26px;
 }
 
 .form-input {
